--- a/HTML/intro.html
+++ b/HTML/intro.html
@@ -8,4 +8,35 @@
 <h5>Esto es parecido a un parraf0</h5>
 <h6>Esto es parecido a un parraf0</h6>
 <!--imagenes-->
-<img src="" alt="">
+<img src="./papelera.png" alt="papelera">
+<img src="https://cdn.worldvectorlogo.com/logos/juventus-5.svg" alt="" width="80px">
+<!--Etiquetas dentros de etiquetas-->
+
+<p>
+  <b>Titular:</b>
+¡Este contenido es <s>Horrible</s> increible!
+</p>
+
+<!--Listas no organizadas-->
+
+<h2>Lista de Compras</h2>
+<ul>
+   <li>Pan</li>
+   <li>Queso</li>
+   <li>Jamon</li>
+</ul>
+
+<!--Listas organizadas-->
+<h2>Tutorial como aprender programacion</h2>
+<ol>
+   <li>Comienza estudiando un area de programacion</li>
+   <li>Desarrolla la logica de programacion</li>
+   <li>Crea muchos proyectos</li>
+   <li>Sigue estudiando</li>
+</ol>
+<!--videos en linea-->
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QCZZwZQ4qNs?si=-FSYT685IkXHbuRq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<!--video local-->
+<video src="Entrevista a Fernando Savater.mp4" controls></video>
