--- a/HTML/intro.html
+++ b/HTML/intro.html
@@ -1,5 +1,5 @@
 <!--Mi promer parrafo-->
-<p>Hola Mundo</p>
+<p id="inicio">Hola Mundo</p>
 <!---->
 <h1>Esto es un titular</h1>
 <h2>Esto es un subtitulo</h2>
@@ -35,8 +35,34 @@
    <li>Sigue estudiando</li>
 </ol>
 <!--videos en linea-->
-
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QCZZwZQ4qNs?si=-FSYT685IkXHbuRq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <!--video local-->
 <video src="Entrevista a Fernando Savater.mp4" controls></video>
+
+<!--boton-->
+<button>Presioname</button>
+
+<!--ancla (Links o enlaces)-->
+<a href="#inicio">Inicio</a>
+
+<a href="https:/www.YouTube.com">Ir a YouTube</a>
+
+<a href="https:/www.gooogle.com" target="_blank">
+   <button>Ir a gooogle</button>
+</a>
+
+<!--  Division (div)-->
+
+<div style="background-color: red;">
+   <h2>Soy una caja Roja</h2>
+   <p>Tengo un contenido increible</p>
+</div>
+
+<div style="background-color:blue;">
+   <h2>Soy una caja Azul</h2>
+   <p>Tengo un contenido increible</p>
+</div>
+
+
+
