--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <!--CSS IN FILE-->
     <link rel="stylesheet" href="./styles/general.css">
+    <link rel="stylesheet" href="./styles/nav.css">
     <!--CSS IN BLOCK-->
     <style>
 
