--- a/youtube/index.html
+++ b/youtube/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./styles/general.css">
+    <link rel="stylesheet" href="./styles/nav.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,13 +13,15 @@
        <div>
           <img src="./imagenes/youtube.png" alt="">
        </div>
-       <div>
+       <div class="menu">
           <p><input placeholder="Buscar"></p>
-          <button><i class="fa fa-search" aria-hidden="true"></i>
-          </button>
+          <p><button id="buscador"><i class="fa fa-search" aria-hidden="true"></i></button></p>
+          <p><button><i class="fa fa-microphone" aria-hidden="true"></i></button></p>
        </div>
-       <div></div>
-    </nav>
+       <div>
+          <p><button><i class="fa fa-bell" aria-hidden="true"></i></i<i</button></p>
+       </div>
+   </nav>
     
 </body>
 </html>
