--- a/youtube/index.html
+++ b/youtube/index.html
@@ -14,12 +14,12 @@
           <img src="./imagenes/youtube.png" alt="">
        </div>
        <div class="menu">
-          <p><input placeholder="Buscar"></p>
-          <p><button id="buscador"><i class="fa fa-search" aria-hidden="true"></i></button></p>
-          <p><button><i class="fa fa-microphone" aria-hidden="true"></i></button></p>
+          <input type="text" placeholder="Buscar" width="1px">
+          <button><i class="fa fa-search" aria-hidden="true"></i></button>
+          <button><i class="fa fa-microphone" aria-hidden="true"></i></button>
        </div>
        <div>
-          <p><button><i class="fa fa-bell" aria-hidden="true"></i></i<i</button></p>
+          <button><i class="fa fa-bell" aria-hidden="true"></i></i<i</button>
        </div>
    </nav>
     
