--- a/CSS/YouTube/index.html
+++ b/CSS/YouTube/index.html
@@ -10,44 +10,41 @@
     <link rel="stylesheet" href="./styles/header.css">
 </head>
 <body>
-   <nav>
-      <div><img src="./imagenes/youtube.png" alt="youtube"  id="youtube"></div>
-      <div>
+ <nav>
+    <div><input type="image" src="./imagenes/youtube.png" id="youtube" alt="youtube"></div>
+    <div>
         <input type="search" name="" id="buscador">
-        <input type="image" src="./imagenes/lupa.png" alt="" id="lupa">
+        <input type="image" src="./imagenes/lupa.png" id="lupa" alt="lupa">
         <input type="image" src="./imagenes/microfono.png" id="microfono" alt="microfono">
-      </div>
-      <div>
+    </div>
+    <div>
         <input type="image" src="./imagenes/notificacion.png" id="notificacion" alt="notificacion">
-        <input type="image" src="" alt="">
-     </div>
- </nav>
- <main>
-    <header>
-        <div class="izquierda">
-           <input type="image" src="./imagenes/inicio.png" alt="" id="inicio">
-           <input type="image" src="./imagenes/suscripciones.png" alt="">
-           <input type="image" src="./imagenes/Historial.png" alt="">
-       </div>
-        <div>
-          <input type="button" value="Musica">
-          <input type="button" value="Habilidades">
-          <input type="button" value="Deportes">
-          <input type="button" value="FC Barcelona">
-          <input type="button" value="Mixes">
-          <input type="button" value="Pesos pesados">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/R_LHkh1r8CE?si=fWDmDisr-DaAVKuK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ilwtbXGehxg?si=a5EkQXxJkIyiFbqW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/mXHaYeu1eUI?si=K-ognCMC0BAfYmjK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/TyWF5k2R1ck?si=-lVHsWQnnbmNC7dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-       </div>
-      
-</header>
-
-
-
- </main>
-
-    
+    </div>
+  </nav>
 </body>
+  <header>
+   <div class="contenedor">
+      <div class="left">
+         <input type="image" src="./imagenes/inicio.png" alt="" id="inicio" title="Inicio">
+         <input type="image" src="./imagenes/suscripciones.png" alt="" id="suscripciones" title="Suscripcion">
+         <input type="image" src="./imagenes/Historial.png" alt="" id="historial" title="Historial">
+         <input type="image" src="./imagenes/lista.png" alt="" id="lista" title="Lista de reproduccion">
+         <input type="image" src="./imagenes/reloj.png" alt="" id="reloj" title="Mas tarde">
+         <input type="image" src="./imagenes/MeGusta.png" alt="" id="megusta" title="Videos que me gustan">
+     </div>
+     </div>
+      <div class="right">
+         <input type="button" value="Todo">
+         <input type="button" value="Musica"> 
+         <input type="button" value="Deportes">
+         <iframe width="200" height="220" src="https://www.youtube.com/embed/ilwtbXGehxg?si=a5EkQXxJkIyiFbqW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         <iframe width="200" height="220" src="https://www.youtube.com/embed/mXHaYeu1eUI?si=K-ognCMC0BAfYmjK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         <iframe width="200" height="220" src="https://www.youtube.com/embed/TyWF5k2R1ck?si=-lVHsWQnnbmNC7dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      </div>
+
+   
+
+   </div>
+  </header>
 </html>
