--- a/CSS/YouTube/index.html
+++ b/CSS/YouTube/index.html
@@ -13,7 +13,7 @@
  <nav>
     <div><input type="image" src="./imagenes/youtube.png" id="youtube" alt="youtube"></div>
     <div>
-        <input type="search" name="" id="buscador">
+        <input type="search" name="" id="buscador" placeholder="Buscar">
         <input type="image" src="./imagenes/lupa.png" id="lupa" alt="lupa">
         <input type="image" src="./imagenes/microfono.png" id="microfono" alt="microfono">
     </div>
@@ -34,17 +34,44 @@
      </div>
      </div>
       <div class="right">
-         <input type="button" value="Todo">
-         <input type="button" value="Musica"> 
-         <input type="button" value="Deportes">
-         <iframe width="200" height="220" src="https://www.youtube.com/embed/ilwtbXGehxg?si=a5EkQXxJkIyiFbqW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-         <iframe width="200" height="220" src="https://www.youtube.com/embed/mXHaYeu1eUI?si=K-ognCMC0BAfYmjK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-         <iframe width="200" height="220" src="https://www.youtube.com/embed/TyWF5k2R1ck?si=-lVHsWQnnbmNC7dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+         <div class="div1">
+          <input type="button"value="Todos">
+         </div>
+         <div class="div2">
+           <input type="button" value="Musica">
+         </div>
+         <div class="div3">
+           <input type="button" value="Deportes">
+         </div>
+         <div class="div4">
+           <input type="button" value="Documentales">
+         </div>
+         <div class="div5">
+           <iframe width="200" height="150" src="https://www.youtube.com/embed/R_LHkh1r8CE?si=fWDmDisr-DaAVKuK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+         </div>
+         <div class="div6">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/ilwtbXGehxg?si=a5EkQXxJkIyiFbqW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         <div class="div7">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/mXHaYeu1eUI?si=K-ognCMC0BAfYmjK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         <div class="div8">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/TyWF5k2R1ck?si=-lVHsWQnnbmNC7dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         <div class="div9">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/OuWaE8UDKe8?si=p6io9OEz8VbgNjqd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
+         </div>
+         <div class="div10">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/YtNzaz7_Wog?si=UsMMIi4wjrRqgaGy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         <div class="div11">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/6dkngmrYNto?si=gitM59qpnbj5SVj3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         <div class="div12">
+          <iframe width="200" height="150" src="https://www.youtube.com/embed/mmeLCAP74KA?si=KFwTWNfWfmJbio-7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         
       </div>
-
-   
-
-   </div>
-  </header>
+  </div>
+ </header>
 </html>
