--- a/SASS/Proyecto_Blog/index.html
+++ b/SASS/Proyecto_Blog/index.html
@@ -3,23 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <!--Tipografia-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
   <title>Proyecto Blog</title>
 </head>
 <body>
   <nav>
-    <div class="Blogs">
-      <div class="Blog1">
-        <img src="./imagenes/canaima.jpg" alt="canaima">
+      <div class="Logo">
+        <p>Venezuela Insigne</p> 
       </div>
-      <div class="Blog2">
+      <div class="Menu">
         <p>Magazine</p>
         <p>Archivo</p>
         <p>Libros</p>
         <p>Podcast</p>
       </div>
-    </div>
-  </nav>
-  
-</body>
+    </nav>
+  </body>
 </html>
