--- a/SASS/Proyecto_Blog/index.html
+++ b/SASS/Proyecto_Blog/index.html
@@ -8,19 +8,89 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Pacifico&display=swap">
   <title>Proyecto Blog</title>
 </head>
 <body>
   <nav>
-      <div class="Logo">
-        <p>Venezuela Insigne</p> 
+    <div class="Logo">
+      <p>Venezuela Insigne</p>
+    </div>
+    <div class="Menu">
+      <p class="Hover">Magazine</p>
+      <p class="Hover">Archivo</p>
+      <p class="Hover">Libros</p>
+      <p class="Hover">Podcast</p>
+    </div>
+    <div class="menu-responsive">
+       <!--Boton Responsive-->
+       <button>X</button>
+    </div>   
+  </nav>
+  <main>
+    <header>
+      <div class="izquierda">
+        <div class="izquierda1">
+          <h1 id="titulo2">Editorial</h1>
+        </div>
+        <div class="izquierda2">
+          <p id="contenido">
+            Venezuela Insigne es un espacio dedicado a resaltar los valores de nuestros venezolanos que han colocado
+            nuestra nacion en la palestra. La creacion del blog toma como referencia el libro Mis Mejores Amigos del
+            Autor Vinicio Romero Martinez en las distintas areas del conocimiento: Diseño, Deportes, Musica e
+            Investigacion cientifica
+          </p>
+        </div>
       </div>
-      <div class="Menu">
-        <p>Magazine</p>
-        <p>Archivo</p>
-        <p>Libros</p>
-        <p>Podcast</p>
-      </div>
-    </nav>
-  </body>
+      <div class="intermedio">
+        <div class="intermedio1">
+          <img src="./imagenes/BlogCH.jpg" alt="" id="blogHererra">
+          <button id="boton1">Leer Mas</button>
+        </div>
+        <div class="intermedio2">
+          <img src="./imagenes/BlogDeportes.jpg" alt="" id="deportes">
+          <button id="boton2">Leer Mas</button>
+        </div>
+        <div class="intermedio3">
+          <img src="./imagenes/BlogOSV.jpg" alt="" id="sinfonica">
+          <button id="boton3">Leer Mas</button>
+        </div>
+        <div class="intermedio4">
+          <img src="./imagenes/BlogJConvit.jpg" alt="" id="JConvit">
+          <button id="boton4">Leer Mas</button>
+        </div>
+        </div>
+      <div class="derecha">
+        <h1 id="titulo">Embajadores</h1>
+        <div class="Herrera">
+          <img src="./imagenes/CHerrera.jpg" alt="" id="cherrera">
+          <h1>Carolina Herrera</h1>
+          <h1>Diseñadora de Moda</h1>
+        </div>
+        <div class="Galarraga">
+          <img src="./imagenes/AGalarraga.jpg" alt="">
+          <h1>Andres Galarraga</h1>
+          <h1>Grande Liga</h1>
+        </div>
+        <div class="Abreu">
+          <img src="./imagenes/JAbreu.jpg" alt="">
+          <h1>Jose Abreu</h1>
+          <h1>Director de Orquesta</h1>
+        </div>
+        <div class="Convit">
+          <img src="./imagenes/JConvit.jpg" alt="">
+          <h1>Jacinto Convit</h1>
+          <h1>Cientifico</h1>
+        </div>
+        </div>
+    </header>
+  </main>
+</body>
 </html>
