--- a/SASS/Proyecto_Blog/index.html
+++ b/SASS/Proyecto_Blog/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Pacifico&display=swap">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Pacifico&display=swap">
   <title>Proyecto Blog</title>
 </head>
 <body>
@@ -30,9 +32,9 @@
       <p class="Hover">Podcast</p>
     </div>
     <div class="menu-responsive">
-       <!--Boton Responsive-->
-       <button>X</button>
-    </div>   
+      <!--Boton Responsive-->
+      <button>X</button>
+    </div>
   </nav>
   <main>
     <header>
@@ -45,7 +47,10 @@
             Venezuela Insigne es un espacio dedicado a resaltar los valores de nuestros venezolanos que han colocado
             nuestra nacion en la palestra. La creacion del blog toma como referencia el libro Mis Mejores Amigos del
             Autor Vinicio Romero Martinez en las distintas areas del conocimiento: Diseño, Deportes, Musica e
-            Investigacion cientifica
+            Investigacion cientifica.
+            Es importate resaltar que la difusion de los contenidos antes mencioados busca cultivar en los jovenes la
+            experiencia de estas magnificas historias que a fin de cuentas pueden considerarse aprendizajes del
+            fascinate viaje llamado Vida.
           </p>
         </div>
       </div>
@@ -66,9 +71,9 @@
           <img src="./imagenes/BlogJConvit.jpg" alt="" id="JConvit">
           <button id="boton4">Leer Mas</button>
         </div>
-        </div>
-      <div class="derecha">
-        <h1 id="titulo">Embajadores</h1>
+      </div>
+        <div class="derecha">
+          <h1 id="titulo">Embajadores</h1>
         <div class="Herrera">
           <img src="./imagenes/CHerrera.jpg" alt="" id="cherrera">
           <h1>Carolina Herrera</h1>
@@ -89,7 +94,7 @@
           <h1>Jacinto Convit</h1>
           <h1>Cientifico</h1>
         </div>
-        </div>
+      </div>
     </header>
   </main>
 </body>
