--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -16,4 +16,5 @@
    alert("Esto se ejecuta una sola vez");
 </script>
 <script src="./seccion1.js"></script>
+<script src="./seccion2.js"></script>
 </html>
